# discord-youtube-streamer

./: .claudeignore  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  NOTICE.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.githooks/: pre-commit
.github/workflows/: main.yml
src/: async_event_handler.py  audio.py  audio_streamer.py  audio_streamer_user_interface.py  base_user_interface.py  bot.py  voice.py  youtube_client.py
src/config/: __init__.py  auth.py
src/discord_youtube_streamer/: __init__.py  bot.py  logging_setup.py
src/discord_youtube_streamer/cogs/: __init__.py
src/discord_youtube_streamer/cogs/youtube/: __init__.py  base_view.py  client.py  cog.py  events.py  models.py  views.py  voice.py
src/discord_youtube_streamer/config/: __init__.py  auth.py  settings.py
tests/: conftest.py  test_auth.py  test_bot.py  test_cog.py  test_events.py  test_models.py  test_package.py  test_voice.py
